[package]
name = "ibc-monitor"
version = "0.1.0"
edition = "2021"
authors = ["Penumbra Labs <team@penumbra.zone>"]
description = "A monitoring tool for IBC light clients"
documentation = "https://github.com/penumbra-zone/ibc-monitor"
readme = "README.md"
homepage = "https://github.com/penumbra-zone/ibc-monitor"
repository = "https://github.com/penumbra-zone/ibc-monitor"
license = "MIT OR Apache-2.0"
keywords = ["ibc", "cosmos", "monitoring", "observability", "blockchain"]
categories = ["command-line-utilities", "network-programming"]
exclude = ["penumbra/**", "target/**", "*.toml", "!Cargo.toml", "!monitor.example.toml"]

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
toml = "0.8"
axum = { version = "0.7", features = ["tokio"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
prost = "0.13"
prost-types = "0.13"
tendermint-rpc = { version = "0.39", features = ["http-client"] }
ibc-proto = { version = "0.49", features = ["client"] }
thiserror = "1.0"

[build-dependencies]
tonic-build = "0.12"